Fix Theme Toggle spacing.

--- a/assets/css/light-dark.css
+++ b/assets/css/light-dark.css
@@ -2,7 +2,8 @@
   --__moon-clr: lightblue;
   --__sun-clr: orange;
   --__shadow-clr: rgba(0, 0, 0, 0.3);
-  --__toggle-spacing: var(--eighth-gap);
+  --__toggle-spacing: var(--quarter-gap);
+  --__label-size: 3em;
 
   position: fixed;
   bottom: 0;
@@ -37,8 +38,8 @@
   display: flex;
   flex-direction: column;
   cursor: pointer;
-  width: 2.75em;
-  height: 2.75em;
+  width: var(--__label-size);
+  height: var(--__label-size);
 }
 
 .moon,
